--- a/maps/maze8.yaml
+++ b/maps/maze8.yaml
@@ -1,4 +1,4 @@
-image: maze8.pgm
+image: /home/danny/catkin_ws/src/maze_bot_control/maps/maze8.pgm
 resolution: 0.050000
 origin: [-99.900000, -100.180000, 0.0000000]
 negate: 0
